# csnd

./: CMakeLists.txt  README.md
common/: accel.hpp  util.hpp
detector/: CMakeLists.txt  detector.hpp
detector/sta_lta_ratio/: CMakeLists.txt  cb.hpp  cb_test.cpp  slr.cpp  slr.hpp  slr_test.cpp
doc/: 99-sensor.rules  ar.json  csnd.service.example  csnd.sh  csnd.yml.example
recorder/: CMakeLists.txt  recorder.cpp  recorder.hpp  recorder_local_posix.cpp
sender/: CMakeLists.txt  sender.hpp
sender/iothub/: CMakeLists.txt  iothub.cpp  iothub.hpp  iothub_test.cpp
sensor/: CMakeLists.txt  sensor.hpp
sensor/onavi/: CMakeLists.txt  onavi.cpp  onavi.hpp  onavi_test.cpp
serializer/: CMakeLists.txt  serializer.hpp  serializer_test.hpp
serializer/avro_c/: CMakeLists.txt  avroc.cpp  avroc.hpp  avroc_test.cpp
serializer/avro_cpp/: CMakeLists.txt  ar.hpp  avrocpp.cpp  avrocpp.hpp  avrocpp_test.cpp
src/: CMakeLists.txt  config.cpp  config.hpp  main.cpp  sampler.cpp  sampler.hpp
